2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-link.c: (dh_link_get,set_is_deprecated):
	* src/dh-link.h: Remove, now obsoleted by get,set_flags.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_value),
	(dh_keyword_model_set_words), (dh_keyword_model_filter): Use
	getters for link members.

2008-10-03  Richard Hult  <richard@imendio.com>

	* data/ui/Makefile.am:
	* data/ui/*.png:
	* data/ui/*.xpm: Remove unused images.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c: (book_tree_finalize), (dh_book_tree_init),
	(book_tree_insert_node): Use getters for link members.
	- Remove the ugly GNOME 1 looking icons from the book tree, use
	bold text to indicate which rows are the toplevel book nodes
	instead.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_cb): Use getters for link
	members.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_tree_link_selected_cb),
	(window_search_link_selected_cb): Use getters for link members.

2008-10-03  Richard Hult  <richard@imendio.com>

	Bug 417692 – Deprecated functions are displayed in grey

	* src/dh-search.c: Use getters for link members, and use italic
	instead of insensitive fg color for deprecated keywords.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (book_sort_func): Use getters for link name.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-link.c:
	* src/dh-link.h: Add getters for the link members, change the
	deprecated bool to a bitfield of flags.
	- Use GSlice for the link struct.
	- Sort deprecated links after non-deprecated.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-window.c:
	* src/dh-window.h: Add private instance data and do lots of
	style/indentation fixes after the webkit merge. Don't use
	deprecated gtk type utils.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: